--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npx nodemon",
     "build": "rm -rf dist && npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ignore-path .eslintignore --ext .ts ."
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,18 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "nodemon": "^2.0.12",
+    "prettier": "^2.6.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
